apps/data-storage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fxp-data-storage
  namespace: fxp-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fxp-data-storage
  template:
    metadata:
      labels:
        app: fxp-data-storage
    spec:
      containers:
      - name: fxp-data-storage
        image: tarek111778/fxp-data-storage-image:v0.0.1
        ports:
        - containerPort: 5003
