apps/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fxp-gateway
  namespace: fxp-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fxp-gateway
  template:
    metadata:
      labels:
        app: fxp-gateway
    spec:
      containers:
      - name: fxp-gateway
        image: tarek111778/fxp-gateway-image:v0.0.3
        ports:
        - containerPort: 5001
