apps/prediction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fxp-prediction
  namespace: fxp-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fxp-prediction
  template:
    metadata:
      labels:
        app: fxp-prediction
    spec:
      containers:
      - name: fxp-prediction
        image: hamimmahdie/forex-prediction:v2
        ports:
        - containerPort: 5002
