apps/data-storage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fxp-data-storage
  namespace: fxp-apps
spec:
  selector:
    app: fxp-data-storage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5003
