apps/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fxp-gateway
  namespace: fxp-apps
spec:
  selector:
    app: fxp-gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
