apps/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fxp-ui
  namespace: fxp-apps
spec:
  type: LoadBalancer
  selector:
    app: fxp-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
