apps/fxp-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fxp-ui-ingress
  namespace: fxp-apps
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: fxp-ui
      port: 
        number: 80
